# coding-control-tower

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  STATUS.md  pyproject.toml  setup.cfg
Formula/: coding-control-tower.rb
docs/: demo-state.json
docs/skills/: wrap-up.md
specs/001-active-card-detail/: spec.md
specs/002-mission-control/design/: Control Tower.html  tower-app.jsx  tower-data.js  tower-ui.jsx  tower-variants.jsx
specs/003-closure-loop/: spec.md
src/coding_control_tower/: __init__.py  adapters.py  cli.py  config.py  paths.py  scan.py  server.py  wrapup.py
src/coding_control_tower/static/: __init__.py  index.html
src/coding_control_tower/static/assets/: __init__.py
tests/: test_config.py  test_public_surface.py  test_scan.py  test_wrapup.py
