[metadata]
name = coding-control-tower
version = 0.1.0
description = Local, project-first dashboard for coding sessions and pull requests
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Mohan Narayanaswamy
url = https://github.com/mohan-n-swamy/coding-control-tower

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
coding_control_tower =
    static/*
    static/assets/*

[options.entry_points]
console_scripts =
    coding-control-tower = coding_control_tower.cli:main

